# up-down-signature

./: LICENSE  Makefile  README.markdown  up-down-signature.cabal
Data/: UpDownSignature.hs
Data/UpDownSignature/: Utility.hs
data/: gendata.R  m100n10p10.txt  m10n10p100.txt  m3n10p10.txt  m3n10rep.txt
src/Data/: UpDownSignature.hs
src/Data/UpDownSignature/: Utility.hs
src/sigscore/: Main.hs  Parsers.hs  Utility.hs
tests/: Tests.hs
